--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,13 @@ cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.0.5
 django-allauth==0.51.0
+django-cuser==2017.3.16
+django-js-asset==2.0.0
+django-modeltranslation==0.18.3
+django-mptt==0.13.4
+django-tinymce==3.4.0
 idna==3.3
+modeltranslation==0.25
 oauthlib==3.2.0
 Pillow==9.1.1
 pycparser==2.21
