--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
 cryptography==37.0.4
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0.5
 django-allauth==0.51.0
 django-cuser==2017.3.16
+django-heroku==0.3.1
 django-js-asset==2.0.0
 django-modeltranslation==0.18.3
 django-mptt==0.13.4
 django-tinymce==3.4.0
+gunicorn==20.1.0
 idna==3.3
 modeltranslation==0.25
 oauthlib==3.2.0
 Pillow==9.1.1
+psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
 python3-openid==3.2.0
@@ -22,3 +27,4 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
 urllib3==1.26.9
+whitenoise==6.2.0
